replace phone_number column with alarm device identifier
